Fix landing image so it wraps

--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@ ul {
 
 .landing {
 	display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
 	align-items: center;
 	padding: 1.8rem;
